@@ -80,6 +80,8 @@ public:
 	virtual bool GetText(string& Data) const = 0;
 	virtual bool GetVText(string& Data) const = 0;
 
+	static void enable_ansi_to_unicode_conversion_workaround(bool Enable);
+
 protected:
 	bool m_Opened{};
 };
